# rust-course

./: Cargo.toml  bors.toml
.github/workflows/: main.yml
src/: bmi.rs  bmi_functions.rs  error.rs  file_handler.rs  height.rs  json_entry.rs  main.rs  tests.rs  weight.rs
