[package]
name = "rust-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_eq = "1.0.0"
inquire = "0.6.1"
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }
clap = { version = "4.2.7", features = ["derive"] }
